2006-10-20  Mike Cvet  <mcvet@redhat.com>

	* FCrash.java: Added.

2006-10-20  Nurdin Premji  <npremji@redhat.com>

	* TestFStack.java: Added.
	* FStack.java (scheduleStack): Added permission check.
	* TestLib.java: Added.	

2006-10-20  Phil Muldoon  <pmuldoon@redhat.com>

	* FCore.java (run): Add permission check, before core dumping.

2006-10-20  Yong Zheng  <zhengyong@cn.ibm.com>

	* FCore.jav (fillENotePrpsinfo): Pass pid as one parameter when refreshing Stat.
	(postProcessElfFile): Support modifications of the e_type in ELF 
	header on big-endian platform.

2006-10-19  Phil Muldoon  <pmuldoon@redhat.com>

	* FCore.java (write_elf_file): Request a elf section notes update
	after NOTES section data is complete. Refetch the notes section header
	after elf_update. Reformat to GNU Style.
	(postProcessElfFile): Reformat to GNU Style.
	(fillENoteSection): Rename sectionDate -> sectionData.
	(fillENotePrpsinfo): Use Proc.get{UID|PID} instead of Stat.get{UID|GID}
	Use Proc.getParent().getPid() to find parent instead of Stat.ppid.
	Use Proc.getCommand() instead of Stat.comm.
	
2006-10-19  Nurdin Premji  <npremji@redhat.com>
	
	* FStack.java (StackTasksObserver.addFailed): Removed TODO message.
	(scheduleStack (int)): Renamed, was run.
	(scheduleStack (Proc)): Added. 	Don't start eventLoop here.

2006-10-19  Yong Zheng  <zhengyo@cn.ibm.com>

	* FCore.java (fillENoteSection): New function to construct PT_NOTE section).
	(constructSectionData): New function to construct PT_NOTE data.
	(fillENotePrpsinfo): New function to fill elf_prpsinfo info.

2006-10-18  Nurdin Premji  <npremji@redhat.com>

	* FStack.java (removeObservers): Refactored proc.requestRemoveAllObservers to proc.requestAbandon.

	* FStack.java (StackTasksObserver.deletedFrom):  Removed hidden print statements.

2006-10-17  Phil Muldoon  <pmuldoon@redhat.com>

	* FCore.java (write_elf_file): Specify wordsize on elf header creation.
	Call postProcess to change elf core file.